[package]
name = "dungeon_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
specs-derive = "0.4.1"
pancurses = "0.17.0"
rand = "0.8.4"
grid = "0.6.0"
float-ord = "0.3.2"
pathfinding = "3"
thiserror = "1"
